--- a/main.html
+++ b/main.html
@@ -10,7 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form>
+	<label>Name</label>
+	<input type="text" id="name" placeholder="Name"><br>
+	<label>Phone Number</label>
+	<input type="text" id="phone" placeholder="Phone Number"><br>
+	<label>Address</label>
+	<input type="text" id="address" placeholder="Address"><br>
+	<label>Have you ever lived with a Dog before?</label><br>
+	<label>Yes</label>
+	<input type="checkbox" id="checkbox" placeholder="YES"><br>
+	<label>No</label>
+	<input type="checkbox" id="checkbox" placeholder="NO"><br>
 
+	<label>Please select your preferred breeds?</label><br>
+	<select name="dog" id="multiSelect">
+		<option>German Shephad</option>
+		<option>Golden Retriver</option>
+		<option>Poodle</option>
+	</select><br>
+	<input id="Submit" type="submit" value="Submit">
+</form>
 </body>
 
 </html>
