--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 		<option>Golden Retriver</option>
 		<option>Poodle</option>
 	</select><br>
-	<input id="Submit" type="submit" value="Submit">
+	<input id="submit" type="submit" value="Submit">
 </form>
 </body>
 
