--- a/main.html
+++ b/main.html
@@ -29,6 +29,7 @@
 		<option>Golden Retriver</option>
 		<option>Poodle</option>
 	</select><br>
+	<label>Submit</label>
 	<input id="submit" type="submit" value="Submit">
 </form>
 </body>
