--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
 	<label>Address</label>
 	<input type="text" id="address" placeholder="Address"><br>
 	<label>Have you ever lived with a Dog before?</label><br>
-	<label>Yes</label>
-	<input type="checkbox" id="checkbox" placeholder="YES"><br>
-	<label>No</label>
-	<input type="checkbox" id="checkbox" placeholder="NO"><br>
+	<label for="checkbox-yes">Yes</label>
+	<input type="checkbox" id="checkbox-yes" value="YES"><br>
+	<label type="checkbox-no">No</label>
+	<input type="checkbox" id="checkbox-no" value="NO"><br>
 
 	<label>Please select your preferred breeds?</label><br>
 	<select name="dog" id="multiSelect">
@@ -29,7 +29,7 @@
 		<option>Golden Retriver</option>
 		<option>Poodle</option>
 	</select><br>
-	<label>Submit</label>
+	
 	<input id="submit" type="submit" value="Submit">
 </form>
 </body>
