--- a/main.html
+++ b/main.html
@@ -13,14 +13,19 @@
 <form>
 	<label>Name</label>
 	<input type="text" id="name" placeholder="Name"><br>
+
 	<label>Phone Number</label>
 	<input type="text" id="phone" placeholder="Phone Number"><br>
+
 	<label>Address</label>
 	<input type="text" id="address" placeholder="Address"><br>
+
 	<label>Have you ever lived with a Dog before?</label><br>
+
 	<label for="checkbox-yes">Yes</label>
 	<input type="checkbox" id="checkbox-yes" value="YES"><br>
-	<label type="checkbox-no">No</label>
+
+	<label for="checkbox-no">No</label>
 	<input type="checkbox" id="checkbox-no" value="NO"><br>
 
 	<label>Please select your preferred breeds?</label><br>
@@ -29,9 +34,10 @@
 		<option>Golden Retriver</option>
 		<option>Poodle</option>
 	</select><br>
-	
+
 	<input id="submit" type="submit" value="Submit">
 </form>
+
 </body>
 
 </html>
