--- a/main.html
+++ b/main.html
@@ -12,28 +12,24 @@
 </script>
 <form>
 	<label>Name</label>
-	<input type="text" id="name" placeholder="Name"><br>
+	<input type="text" id="name" placeholder="Name"><br><br>
 
 	<label>Phone Number</label>
-	<input type="text" id="phone" placeholder="Phone Number"><br>
+	<input type="text" id="phone" placeholder="Phone Number"><br><br>
 
 	<label>Address</label>
-	<input type="text" id="address" placeholder="Address"><br>
+	<input type="text" id="address" placeholder="Address"><br><br>
 
-	<label>Have you ever lived with a Dog before?</label><br>
+	<label>	<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+Have you ever lived with a Dog before?</label><br><br>
 
-	<label for="checkbox-yes">Yes</label>
-	<input type="checkbox" id="checkbox-yes" value="YES"><br>
-
-	<label for="checkbox-no">No</label>
-	<input type="checkbox" id="checkbox-no" value="NO"><br>
 
 	<label>Please select your preferred breeds?</label><br>
 	<select name="dog" id="multiSelect">
-		<option>German Shephad</option>
-		<option>Golden Retriver</option>
-		<option>Poodle</option>
-	</select><br>
+		<option value="German Shephad">German Shephad</option>
+		<option value="Golden Retriver">Golden Retriver</option>
+		<option value="Poodle">Poodle</option>
+	</select><br><br>
 
 	<input id="submit" type="submit" value="Submit">
 </form>
